terraform/hashicorp/tf-challenges/challenge-1.tf
# ORIGINAL CODE

provider "aws" {
  version = "~> 2.54"
  region  = "us-east-1"
  access_key = "AKIAIOSFODNN7EXAMPLE"
  secret_key = "wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY"
}

provider "digitalocean" {}

terraform {
    required_version = "0.12.31"
}



# NEW CODE

resource "aws_eip" "kplabs_app_ip" {
  vpc      = true
}

provider "aws" {
  region  = "us-east-1"
}

terraform {
  required_providers {
    digitalocean = {
      source  = "digitalocean/digitalocean"
    }
  }
}

resource "aws_eip" "kplabs_app_ip" {
  domain   = "vpc"
}
